sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3: error: not found: value cocktailSort3
		cocktailSort3();
                ^AlgCocktailSort3:9: error: not found: value parcrous_gauche
     parcrous_gauche = false
     ^